Fix spacing dar turnos / reasignar turnos

--- a/src/app/styles/turnos/reasignarTurno.scss
+++ b/src/app/styles/turnos/reasignarTurno.scss
@@ -12,6 +12,6 @@
     }
 }
 
-.outline-dashed-default {
+.reasignar .outline-dashed-default {
     padding: 0 !important;
 }
